--- a/gridCrashCourse/grid.css
+++ b/gridCrashCourse/grid.css
@@ -34,21 +34,23 @@ body{
     padding:20px;
     border:skyblue 1px solid;
 }
-.item:nth-of-type(1){
-    /* background:#000;
-    grid-column:1/3; */
-    /* grid-column-start:1;
-    grid-column-end:3; */
-    /* grid-column: (start) (span 2 - how many space it get) */
-    /* grid-column:1 /span 2; */ 
-}
+/* grid-column: (start) (span 2 - how many space it get) */
+/* .item:nth-of-type(1){
+    background:#000;
+    grid-column:1/3;
 
-.item:nth-of-type(2){
-    /* height:100px;
+    grid-column-start:1;
+    grid-column-end:3;
+    
+    grid-column:1 /span 2; 
+} */
+
+/* .item:nth-of-type(2){
+    height:100px;
     width:100px;
     align-self:center;
-    justify-self:center; */
-}
+    justify-self:center;
+} */
 /* .item:nth-of-type(3){
     background:#333;
     grid-row:2/4;
